package invoice

import (
	"fmt"
	"github.com/centrifuge/centrifuge-protobufs/gen/go/coredocument"
	"github.com/centrifuge/centrifuge-protobufs/gen/go/invoice"
	"github.com/centrifuge/go-centrifuge/centrifuge/centerrors"
	"github.com/centrifuge/go-centrifuge/centrifuge/code"
	"github.com/centrifuge/go-centrifuge/centrifuge/coredocument/processor"
	"github.com/centrifuge/go-centrifuge/centrifuge/coredocument/repository"
	"github.com/centrifuge/go-centrifuge/centrifuge/identity"
	clientinvoicepb "github.com/centrifuge/go-centrifuge/centrifuge/protobufs/gen/go/legacy/invoice"
	"github.com/centrifuge/go-centrifuge/centrifuge/storage"
	"github.com/golang/protobuf/ptypes/empty"
	logging "github.com/ipfs/go-log"
	"golang.org/x/net/context"
)

var apiLog = logging.Logger("invoice-api")

// GRPCHandler handles all the invoice document related actions
// anchoring, sending, proof generation, finding stored invoice document
type GRPCHandler struct {
	InvoiceRepository     storage.Repository
	CoreDocumentProcessor coredocumentprocessor.Processor
}

// anchorInvoiceDocument anchors the given invoice document and returns the anchored document
func (h *GRPCHandler) anchorInvoiceDocument(ctx context.Context, doc *invoicepb.InvoiceDocument, collaborators []identity.CentID) (*invoicepb.InvoiceDocument, error) {
	inv, err := New(doc)
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	// TODO review this create, do we need to refactor this because Send method also calls this?
	err = h.InvoiceRepository.Create(inv.Document.CoreDocument.DocumentIdentifier, inv.Document)
	if err != nil {
		apiLog.Error(err)
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("error saving invoice: %v", err))
	}

	coreDoc, err := inv.ConvertToCoreDocument()
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	err = h.CoreDocumentProcessor.Anchor(ctx, coreDoc, collaborators)
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	// we do not need this conversion again
	newInvoice, err := NewFromCoreDocument(coreDoc)
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	return newInvoice.Document, nil
}

// CreateInvoiceProof creates proofs for a list of fields
func (h *GRPCHandler) CreateInvoiceProof(ctx context.Context, createInvoiceProofEnvelope *clientinvoicepb.CreateInvoiceProofEnvelope) (*clientinvoicepb.InvoiceProof, error) {
	invDoc := new(invoicepb.InvoiceDocument)
	err := h.InvoiceRepository.GetByID(createInvoiceProofEnvelope.DocumentIdentifier, invDoc)
	if err != nil {
		return nil, err
	}

	inv, err := Wrap(invDoc)
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	proofs, err := inv.CreateProofs(createInvoiceProofEnvelope.Fields)
	if err != nil {
		apiLog.Error(err)
		return nil, err
	}

	return &clientinvoicepb.InvoiceProof{FieldProofs: proofs, DocumentIdentifier: inv.Document.CoreDocument.DocumentIdentifier}, nil

}

// AnchorInvoiceDocument anchors the given invoice document and returns the anchor details
func (h *GRPCHandler) AnchorInvoiceDocument(ctx context.Context, anchorInvoiceEnvelope *clientinvoicepb.AnchorInvoiceEnvelope) (*invoicepb.InvoiceDocument, error) {
	anchoredInvDoc, err := h.anchorInvoiceDocument(ctx, anchorInvoiceEnvelope.Document, nil)
	if err != nil {
		apiLog.Error(err)
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("failed to anchor: %v", err))
	}

	// Updating invoice with autogenerated fields after anchoring
	err = h.InvoiceRepository.Update(anchoredInvDoc.CoreDocument.DocumentIdentifier, anchoredInvDoc)
	if err != nil {
		apiLog.Error(err)
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("error saving document: %v", err))
	}

	return anchoredInvDoc, nil

}

// SendInvoiceDocument anchors and sends an invoice to the recipient
func (h *GRPCHandler) SendInvoiceDocument(ctx context.Context, sendInvoiceEnvelope *clientinvoicepb.SendInvoiceEnvelope) (*invoicepb.InvoiceDocument, error) {
	errs, recipientIDs := identity.ParseCentIDs(sendInvoiceEnvelope.Recipients)
	if len(errs) != 0 {
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("%v", errs))
	}
	doc, err := h.anchorInvoiceDocument(ctx, sendInvoiceEnvelope.Document, recipientIDs)
	if err != nil {
		return nil, centerrors.Wrap(err, "error when anchoring document")
	}
	// Updating invoice with autogenerated fields after anchoring
	err = h.InvoiceRepository.Update(doc.CoreDocument.DocumentIdentifier, doc)
	if err != nil {
		apiLog.Error(err)
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("error saving document: %v", err))
	}

	// Load the CoreDocument stored in DB before sending to Collaborators
	// So it contains the whole CoreDocument Data
	coreDoc := new(coredocumentpb.CoreDocument)
	err = coredocumentrepository.GetRepository().GetByID(doc.CoreDocument.DocumentIdentifier, coreDoc)
	if err != nil {
		return nil, centerrors.New(code.DocumentNotFound, err.Error())
	}

	for _, recipient := range recipientIDs {
		err = h.CoreDocumentProcessor.Send(ctx, coreDoc, recipient)
		if err != nil {
			errs = append(errs, err)
		}
	}

	if len(errs) != 0 {
		apiLog.Errorf("%v", errs)
		return nil, centerrors.New(code.Unknown, fmt.Sprintf("%v", errs))
	}

	return doc, nil
}

// GetInvoiceDocument returns already stored invoice document
func (h *GRPCHandler) GetInvoiceDocument(ctx context.Context, getInvoiceDocumentEnvelope *clientinvoicepb.GetInvoiceDocumentEnvelope) (*invoicepb.InvoiceDocument, error) {
	doc := new(invoicepb.InvoiceDocument)
	err := h.InvoiceRepository.GetByID(getInvoiceDocumentEnvelope.DocumentIdentifier, doc)
	if err == nil {
		return doc, nil
	}

	coreDoc := new(coredocumentpb.CoreDocument)
	err = coredocumentrepository.GetRepository().GetByID(getInvoiceDocumentEnvelope.DocumentIdentifier, coreDoc)
	if err != nil {
		return nil, centerrors.New(code.DocumentNotFound, err.Error())
	}

	inv, err := NewFromCoreDocument(coreDoc)
	if err != nil {
		return nil, centerrors.New(code.Unknown, err.Error())
	}

	return inv.Document, nil
}

// GetReceivedInvoiceDocuments returns all the received invoice documents
func (h *GRPCHandler) GetReceivedInvoiceDocuments(ctx context.Context, empty *empty.Empty) (*clientinvoicepb.ReceivedInvoices, error) {
	return nil, nil
}
